--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activitysda
+        <activity
             android:name=".login"
             android:label="@string/title_activity_login" >
-        </activitysda>
+        </activity>
     </application>
 
 </manifest>
