--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,14 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-
         android:theme="@style/AppTheme" >
         <activity
             android:name=".login"
             android:label="@string/title_activity_login" >
-
+        </activity>
+        <activity
+            android:name=".inicio"
+            android:label="@string/title_activity_inicio" >
         </activity>
     </application>
 
